fix(ui): fix slider overflow overlapping bug by shifting horizontal padding to slide items

--- a/css/style.css
+++ b/css/style.css
@@ -153,7 +153,6 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
   overflow: hidden;
   width: 100%;
-  padding: 40px 80px;
 }
 
 .slides {
@@ -171,6 +170,7 @@ h1, h2, h3, h4, h5, h6 {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding: 40px 80px;
 }
 
 /* Slider Nav Buttons */
@@ -205,7 +205,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 @media (max-width: 768px) {
-  .flexslider {
+  .slides li {
     padding: 40px 50px;
   }
   .slider-prev {
